Refactor Hive view test to share metastore again
In 69a4a9c66422aa309df6fef33dc781bf70999f66, the
`testSelectFromPrestoViewReferencingHiveTableWithTimestamps` test was
changed not to share metastore. While
69a4a9c66422aa309df6fef33dc781bf70999f66 was generally a good change (no
implicit sharing of metastore in tests), in this particular test the
sharing was intentional. Now that the test is extracted to separate
class (prev commit), it can be changed to share metastore again.

This also changes the test to be more explicit which catalog is used in
which query. The session no longer has any default catalog.